# Kdroid

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: README.md
docs/: ROADMAP.md  reference-projects.md
scripts/: run_scout_loop.py  test_single_capture.py
src/kdroid/: __init__.py  config.py  local_store.py  robot_control.py  sensor_bridge.py  waypoint_manager.py  workflow_trigger.py
workflows/: plant_health_workflow.md
