[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kdroid"
version = "0.1.0"
description = "Autonomous plant-scouting UGV Beast, built on the Cyberwave SDK"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]
